--- a/_assets/scss/_site-header.scss
+++ b/_assets/scss/_site-header.scss
@@ -146,7 +146,7 @@
             a {
                 color: white;
                 background-color: var(--color-darkblue);
-                border-radius: 1.5rem;
+                border-radius: 20rem;
                 padding: 0.8rem 2.7rem;
                 text-decoration: none;
                 border: none;
@@ -155,6 +155,9 @@
                 font-weight: bold;
                 margin-top: 0.8rem;
                 margin-bottom: 2rem;
+                animation: changeform 3s ease-out;
+                animation-direction: alternate;
+                animation-iteration-count: infinite;
                 transition: background-color 0.4s ease-in-out;
 
                 &:hover {
