--- a/_assets/scss/pages/vehicles.scss
+++ b/_assets/scss/pages/vehicles.scss
@@ -9,11 +9,13 @@
 
             &:after {
                 content: '';
-                width: 100px;
                 height: 2px;
                 background-color: var(--color-darkblue);
                 display: block;
                 margin: 1rem auto;
+                animation: changehrwidth 2s ease-out;
+                animation-direction: alternate;
+                animation-iteration-count: infinite;
             }
         }
         .vehicle-type {
@@ -58,6 +60,7 @@
                 &:hover {
                     .img-description{ opacity: 1 };
                 }
+                
                 input {
                     display: none;
                 }
