--- a/docs/css/pages/contacts.css
+++ b/docs/css/pages/contacts.css
@@ -6,11 +6,16 @@
     margin-top: 1rem; }
     .site-main h2:after {
       content: '';
-      width: 100px;
       height: 2px;
       background-color: var(--color-darkblue);
       display: block;
-      margin: 1rem auto; }
+      margin: 1rem auto;
+      -webkit-animation: changehrwidth 2s ease-out;
+              animation: changehrwidth 2s ease-out;
+      -webkit-animation-direction: alternate;
+              animation-direction: alternate;
+      -webkit-animation-iteration-count: infinite;
+              animation-iteration-count: infinite; }
   .site-main section {
     margin: 1rem auto;
     width: 90%;
