--- a/docs/css/pages/index.css
+++ b/docs/css/pages/index.css
@@ -12,11 +12,16 @@
     text-align: center; }
     .site-main .news-section h2:after {
       content: '';
-      width: 100px;
       height: 2px;
       background-color: var(--color-darkblue);
       display: block;
-      margin: 1rem auto; }
+      margin: 1rem auto;
+      -webkit-animation: changehrwidth 2s ease-out;
+              animation: changehrwidth 2s ease-out;
+      -webkit-animation-direction: alternate;
+              animation-direction: alternate;
+      -webkit-animation-iteration-count: infinite;
+              animation-iteration-count: infinite; }
   .site-main .news-section .news {
     display: flex;
     justify-content: space-around; }
@@ -204,8 +209,13 @@
         content: '\f00c';
         display: block;
         font-weight: 900;
-        color: #fff;
-        margin-right: 1em; }
+        margin-right: 1em;
+        -webkit-animation: changecolor 0.6s ease-out;
+                animation: changecolor 0.6s ease-out;
+        -webkit-animation-direction: alternate;
+                animation-direction: alternate;
+        -webkit-animation-iteration-count: infinite;
+                animation-iteration-count: infinite; }
 
 .site-main .subscribe-section {
   text-align: center;
@@ -215,11 +225,16 @@
   padding-bottom: 0; }
   .site-main .subscribe-section h2:after {
     content: '';
-    width: 100px;
     height: 2px;
     background-color: #fff;
     display: block;
-    margin: 1rem auto; }
+    margin: 1rem auto;
+    -webkit-animation: changehrwidth 2s ease-out;
+            animation: changehrwidth 2s ease-out;
+    -webkit-animation-direction: alternate;
+            animation-direction: alternate;
+    -webkit-animation-iteration-count: infinite;
+            animation-iteration-count: infinite; }
   .site-main .subscribe-section p {
     margin: 0 auto; }
     @media (max-width: 1024px) {
