--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -34,17 +34,42 @@ html {
   --color-grey: rgb(107, 107, 107);
   --color-darkblue-gallery: rgb(0, 18, 53); }
 
-/*@keyframes slideToRight {
-    from {
-        opacity: 0;
-        transform: translateX(-1em);
-    }
+@-webkit-keyframes changeform {
+  from {
+    border-radius: 20rem; }
+  to {
+    border-radius: 0; } }
 
-    to {
-        opacity: 1;
-        transform: translateX(0);
-    }
-}*/
+@keyframes changeform {
+  from {
+    border-radius: 20rem; }
+  to {
+    border-radius: 0; } }
+
+@-webkit-keyframes changehrwidth {
+  from {
+    width: 150px; }
+  to {
+    width: 50px; } }
+
+@keyframes changehrwidth {
+  from {
+    width: 150px; }
+  to {
+    width: 50px; } }
+
+@-webkit-keyframes changecolor {
+  from {
+    color: #fff; }
+  to {
+    color: #00be00; } }
+
+@keyframes changecolor {
+  from {
+    color: #fff; }
+  to {
+    color: #00be00; } }
+
 .site-main {
   opacity: 0;
   transform: translateY(-2em);
@@ -174,7 +199,7 @@ html {
     .site-header section a {
       color: white;
       background-color: var(--color-darkblue);
-      border-radius: 1.5rem;
+      border-radius: 20rem;
       padding: 0.8rem 2.7rem;
       text-decoration: none;
       border: none;
@@ -183,6 +208,12 @@ html {
       font-weight: bold;
       margin-top: 0.8rem;
       margin-bottom: 2rem;
+      -webkit-animation: changeform 3s ease-out;
+              animation: changeform 3s ease-out;
+      -webkit-animation-direction: alternate;
+              animation-direction: alternate;
+      -webkit-animation-iteration-count: infinite;
+              animation-iteration-count: infinite;
       transition: background-color 0.4s ease-in-out; }
       .site-header section a:hover {
         background-color: var(--color-grey); }
