--- a/_assets/scss/pages/index.scss
+++ b/_assets/scss/pages/index.scss
@@ -63,6 +63,7 @@
                     .date {
                         color: grey;
                         padding: 0.4rem 0;
+                        font-style: italic;
 
                         @include bp(laptop) {
                             font-size: var(--font-size-supersmall);
@@ -142,9 +143,11 @@
                 
                 img {
                     display: block;
-                    margin: 1rem auto;
+                    margin: 0 auto;
                     height: auto;
                     width: 900px;
+                    outline: var(--color-darkblue) 8px solid;
+                    cursor: pointer;
 
                     @include bp(laptop) {
                         width: 600px;
@@ -162,15 +165,18 @@
                         width: 200px;
                     }
                 }
+
                 .overlay {
                     position: absolute;
                     bottom: 0;
                     left: 0;
                     right: 0;
-                    background: rgba(0, 0, 0, 0.5);
-                    width: 0;
-                    height: 15%;
-                    transition: width 0.5s ease-in;
+                    background: rgba(2, 48, 97, 0.8);
+                    width: 100%;
+                    height: 0px;
+                    transition: height 0.2s ease-in;
+                    cursor: pointer;
+
                     @include bp(laptop) {
                         height: 25%;
                     }
@@ -195,6 +201,7 @@
                         top: 50%;
                         left: 50%;                      
                         transform: translate(-50%, -50%);
+                        font-weight: bold;
                         @include bp(laptop) {
                             font-size: var(--font-size-supersmall);
                         }
@@ -213,7 +220,7 @@
                     }
                 }
                 &:hover .overlay {
-                    width: 100%;
+                    height: 100px;
                 }
                 &:hover .text {
                     opacity: 1;
@@ -227,13 +234,25 @@
             color: #fff;
             background: rgb(50, 88, 165);
 
-            h2 {
-                padding-bottom: 1rem;
+            p:nth-of-type(2) {
+                width: 80%;
+                margin: 0 auto;
+                padding-top: 0.5em;
+            }
+
+            h3 {
+                padding-bottom: 0.4em;
+            }
+
+            .last-update-date {
+                font-style: italic;
+                opacity: 0.5;
+                font-size: 14px;
+                padding-bottom: 0.4em;
             }
 
             ul {
-                display: block;
-                width: 350px;
+                display: inline-block;
                 margin: 0 auto;
         
                 @include bp(tablet) {
@@ -246,6 +265,17 @@
 
                 @include bp(small-phone) {
                     width: 200px;
+                }
+                
+                &:after {
+                    content: '';
+                    height: 2px;
+                    background-color: #fff;
+                    display: block;
+                    margin: 2rem auto;
+                    animation: changehrwidth 2s ease-out;
+                    animation-direction: alternate;
+                    animation-iteration-count: infinite;
                 }
 
                 li {
@@ -272,9 +302,6 @@
                         display: block;
                         font-weight: 900;
                         margin-right: 1em;
-                        animation: changecolor 0.6s ease-out;
-                        animation-direction: alternate;
-                        animation-iteration-count: infinite;
                     }
                 }
             }
@@ -287,16 +314,7 @@
             padding-bottom: 0;
 
             h2 {
-                &:after {
-                    content: '';
-                    height: 2px;
-                    background-color: #fff;
-                    display: block;
-                    margin: 1rem auto;
-                    animation: changehrwidth 2s ease-out;
-                    animation-direction: alternate;
-                    animation-iteration-count: infinite;
-                }
+                padding-bottom: 1.5rem;
             }
             p {
                 margin: 0 auto;
